# inventory-cli

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  config.toml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
inventory/: __init__.py  client.py  config.py  console.py  main.py
inventory/commands/: __init__.py  _common.py  _lookup.py  assets.py  models.py
inventory/core/: __init__.py  passmark.py  pricing.py  resolvers.py
inventory/data/: __init__.py  passmark.csv
tests/: conftest.py  test_assets_commands.py  test_config.py  test_models_commands.py  test_passmark.py  test_pricing.py  test_resolvers.py
