[project]
name = "inventory-cli"
version = "0.1.0"
description = "CLI tool for managing Snipe-IT inventory assets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "snipeit-api",
    "rapidfuzz>=3",
]

[project.scripts]
inventory = "inventory.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
snipeit-api = { git = "https://github.com/lfctech/snipeit-python-api" }

[tool.setuptools.packages.find]
include = ["inventory*"]

[tool.setuptools.package-data]
inventory = ["data/*.csv"]

