[project]
name = "inventory-cli"
version = "0.2.0"
description = "CLI tool for managing Snipe-IT inventory assets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<16",
    "snipeit-api>=0.5.0,<1",
    "rapidfuzz>=3,<4",
]

[project.scripts]
inventory = "inventory.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
snipeit-api = { git = "https://github.com/lfctech/snipeit-python-api", tag = "v0.5.0" }

[tool.setuptools.packages.find]
include = ["inventory*"]

[tool.setuptools.package-data]
inventory = ["data/*.csv"]

[dependency-groups]
dev = [
    "pyright>=1.1.409,<2",
    "ruff>=0.15.12,<1",
    "pytest>=8,<10",
    "pytest-httpx>=0.30,<1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["inventory"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
